--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -128,7 +128,7 @@
                 }
             ],
             "language": {
-                "url": "//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json"
+                "url": "https://cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json"
             }
         });
 
