--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -118,14 +118,14 @@
                 {
                     "data": "total_grupos",
                     "render": function(data, type, row) {
-                        return `<input type="number" value="${data}" class="numeric-input form-control bg-white text-black mx-auto text-center grupos" style="width:80px">`;
+                        return `<input type="number" value="${data}"    class="numeric-input form-control bg-white text-black mx-auto text-center grupos" style="width:80px">`;
                     },
                     "className": "text-center"
                 },
                 {
                     "data": null,
                     "render": function(data, type, row) {
-                        return `<input type="checkbox" class="form-check-input me-3 border border-dark">`;
+                        return `<input type="checkbox" class="form-check-input me-3 border border-dark che" >`;
                     },
                     "className": "text-center",
                     "orderable": false
@@ -135,12 +135,27 @@
                 "url": "//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json"
             }
         });
-    
+
+
         // Eliminamos el atributo "step" de los campos numéricos al inicializar la tabla
         table.on('draw.dt', function() {
-            $('.numeric-input').removeAttr('step');
+            // Asignar evento 'click' a los inputs de tipo número con clase 'numeric-input'
+            $('.numeric-input').off('input').on('input', function() {
+                valida(this);
+            });
         });
-    
+        function valida(element) {
+            var padre = element.parentNode.parentNode; 
+            var checkbox = padre.querySelector('.che');
+            var valor = parseInt(element.value, 10);    
+            if (valor > 0 && valor < 28) {
+                checkbox.checked = true;
+            } else {
+                checkbox.checked = false;
+            }
+        }
+        
+        
         window.rellenarTabla = function(escuela,semestre) {
             fetch(`/rellenar_tabla/${escuela}/${semestre}`)
                 .then(response => response.json())
@@ -153,7 +168,6 @@
                     console.error('Error al obtener los datos de la tablas:', error);
                 });
         };
-
         function grupos(datos) {
             fetch('/mantenimiento_grupos', {
                 method: 'POST',
