--- a/templates/dashboard/reporte_gruposdocente.html
+++ b/templates/dashboard/reporte_gruposdocente.html
@@ -1,7 +1,7 @@
 {% extends "dashboard/index.html" %}
 
 {% block titulo %}
-  Reportes por Ambiente y Docente
+  Reportes de Disponibilidad de docentes y grupos horario
 {% endblock %}
 
 {% block contenido %}
