ASIGNACIONES DE MIERDA ME DAN

--- a/templates/dashboard/disponibilidad.html
+++ b/templates/dashboard/disponibilidad.html
@@ -155,7 +155,7 @@
                 autoWidth: true,
                 searching: true,
                 scrollY: "510px",
-                order: [], 
+                order: [0,'asc'], 
                 dom: 'Bfrtip',
                 buttons: [
                     {
