--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -174,7 +174,7 @@
                 autoWidth: true,
                 searching: true,
                 scrollY: "510px",
-                order: [],
+                order: [0,'asc'],
                 dom: 'Bfrtip',
                 buttons: [
                     {
