--- a/templates/dashboard/disponibilidad.html
+++ b/templates/dashboard/disponibilidad.html
@@ -13,7 +13,7 @@
 
 <div id="mensajeResultado" style="display: none;"></div>
 
-<div class="card mx-2" id="card_ambientes">
+<div class="card mx-2" id="card_disponibilidad">
     <div class="card-header bg-red-usat text-white" id="headingOne" data-bs-toggle="collapse"
         data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         Disponibilidad
@@ -21,64 +21,62 @@
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#miAccordion">
         <div class="card-body">
             <div class="table-responsive mt-3">
-                <table id="tabla-ambiente" class="table table-striped" style="width:100%">
+                <table id="tabla-disponibilidad" class="table table-striped" style="width:100%">
                     <thead>
                         <tr>
                             <th style="width: 20%; text-align: center;">Docente</th>
-                            <th style="width: 10%; text-align: center;">Dia</th>
+                            <th style="width: 10%; text-align: center;">Día</th>
                             <th style="width: 15%; text-align: center;">Hora Inicio</th>
                             <th style="width: 15%; text-align: center;">Hora Fin</th>
                             <th style="width: 10%; text-align: center;">Opciones</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- Los datos de los ambientes se cargarán dinámicamente aquí -->
+                        <!-- Los datos de disponibilidad se cargarán dinámicamente aquí -->
                     </tbody>
                 </table>
             </div>
-
         </div>
     </div>
 
-    <!-- Modal para agregar o modificar un ambiente -->
-    <div class="modal fade" id="modalAmbiente" tabindex="-1" aria-labelledby="modalAmbienteLabel" aria-hidden="true">
+    <!-- Modal para agregar o modificar disponibilidad -->
+    <div class="modal fade" id="modalDisponibilidad" tabindex="-1" aria-labelledby="modalDisponibilidadLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalAmbienteLabel">Agregar Ambiente</h5>
+                    <h5 class="modal-title" id="modalDisponibilidadLabel">Agregar Disponibilidad</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="formAmbiente">
-                        <input type="hidden" id="idAmbiente">
+                    <form id="formDisponibilidad">
+                        <input type="hidden" id="idDisponibilidad">
                         <div class="mb-3">
-                            <label for="nombre" class="form-label">Nombre:</label>
-                            <input type="text" class="form-control" id="nombre" name="nombre" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="aforo" class="form-label">Aforo:</label>
-                            <input type="number" class="form-control" id="aforo" name="aforo" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="estado" class="form-label">Estado:</label>
-                            <select class="form-control" id="estado" name="estado" required>
+                            <label for="docente" class="form-label">Docente:</label>
+                            <select class="form-control" id="docente" name="docente" required>
                                 <option value="">Seleccione</option>
-                                <option value="A">Activo</option>
-                                <option value="I">Inactivo</option>
+                                <!-- Los docentes se cargarán dinámicamente aquí -->
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label for="idedificio" class="form-label">Edificio:</label>
-                            <select class="form-control" id="idedificio" name="idedificio" required>
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="idambientetipo" class="form-label">Tipo de Ambiente:</label>
-                            <select class="form-control" id="idambientetipo" name="idambientetipo" required>
+                            <label for="dia" class="form-label">Día:</label>
+                            <select class="form-control" id="dia" name="dia" required>
                                 <option value="">Seleccione</option>
-                                <option value="1">Aula</option>
-                                <option value="2">Laboratorio</option>
+                                <option value="Lunes">Lunes</option>
+                                <option value="Martes">Martes</option>
+                                <option value="Miércoles">Miércoles</option>
+                                <option value="Jueves">Jueves</option>
+                                <option value="Viernes">Viernes</option>
+                                <option value="Sábado">Sábado</option>
+                                <option value="Domingo">Domingo</option>
                             </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="horaInicio" class="form-label">Hora Inicio:</label>
+                            <input type="time" class="form-control" id="horaInicio" name="horaInicio" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="horaFin" class="form-label">Hora Fin:</label>
+                            <input type="time" class="form-control" id="horaFin" name="horaFin" required>
                         </div>
                         <button type="submit" class="btn btn-primary">Guardar</button>
                     </form>
@@ -138,17 +136,33 @@
 
         // Generar y guardar el archivo
         workbook.xlsx.writeBuffer().then(function (buffer) {
-            saveAs(new Blob([buffer], { type: 'application/octet-stream' }), 'USAT_Ambientes_Plantilla.xlsx');
+            saveAs(new Blob([buffer], { type: 'application/octet-stream' }), 'USAT_Disponibilidad_Plantilla.xlsx');
         });
     }
-</script>
 
-<script>
+    function cargarDocentes() {
+        $.ajax({
+            url: '/get_docentes',
+            type: 'GET',
+            success: function (data) {
+                var docentesSelect = $('#docente');
+                docentesSelect.empty();
+                docentesSelect.append('<option value="">Seleccione</option>');
+                data.forEach(function (docente) {
+                    docentesSelect.append('<option value="' + docente.idpersona + '">' + docente.nombre_completo + '</option>');
+                });
+            },
+            error: function (xhr, status, error) {
+                console.error('Error al cargar los docentes:', error);
+            }
+        });
+    }
+
     $(document).ready(function () {
         var disponibilidad = [];
 
         function initializeDataTable() {
-            var table = $('#tabla-ambiente').DataTable({
+            var table = $('#tabla-disponibilidad').DataTable({
                 paging: false,
                 info: false,
                 responsive: true,
@@ -215,13 +229,14 @@
                     },
                     {
                         text: '<i class="fas fa-plus"></i> Agregar Nueva Disponibilidad',
-                        className: 'btn_agregar_ambiente',
+                        className: 'btn_agregar_disponibilidad',
                         action: function (e) {
                             e.preventDefault();
-                            $('#modalAmbienteLabel').text('Agregar Nueva Disponibilidad');
-                            $('#formAmbiente')[0].reset();
-                            $('#idAmbiente').val('');
-                            $('#modalAmbiente').modal('show');
+                            $('#modalDisponibilidadLabel').text('Agregar Nueva Disponibilidad');
+                            $('#formDisponibilidad')[0].reset();
+                            $('#idDisponibilidad').val('');
+                            $('#modalDisponibilidad').modal('show');
+                            cargarDocentes();
                         }
                     }
                 ],
@@ -242,9 +257,9 @@
                         "data": null, "className": 'dt-body-center',
                         "render": function (data, type, row) {
                             return `
-                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idambiente}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
-                            <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idambiente}" title="Eliminar"><i class="fas fa-times"></i></button>
-                            <button class="btn btn-secondary btn-sm btnDarDeBaja" data-id="${row.idambiente}" title="Dar de Baja"><i class="fas fa-arrow-down"></i></button>
+                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.id}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
+                            <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.id}" title="Eliminar"><i class="fas fa-times"></i></button>
+                            <button class="btn btn-secondary btn-sm btnDarDeBaja" data-id="${row.id}" title="Dar de Baja"><i class="fas fa-arrow-down"></i></button>
                         `;
                         }
                     }
@@ -265,8 +280,8 @@
         }
 
         var table;
-        if ($.fn.DataTable.isDataTable('#tabla-ambiente')) {
-            table = $('#tabla-ambiente').DataTable();
+        if ($.fn.DataTable.isDataTable('#tabla-disponibilidad')) {
+            table = $('#tabla-disponibilidad').DataTable();
             table.ajax.reload();
         } else {
             table = initializeDataTable();
@@ -282,19 +297,18 @@
             });
         }
 
-        $('#formAmbiente').submit(function (e) {
+        $('#formDisponibilidad').submit(function (e) {
             e.preventDefault();
             var data = {
-                nombre: $('#nombre').val(),
-                aforo: $('#aforo').val(),
-                estado: $('#estado').val(),
-                idedificio: $('#idedificio').val(),
-                idambientetipo: $('#idambientetipo').val()
+                docente: $('#docente').val(),
+                dia: $('#dia').val(),
+                horaInicio: $('#horaInicio').val(),
+                horaFin: $('#horaFin').val()
             };
 
-            var idAmbiente = $('#idAmbiente').val();
-            var url = idAmbiente ? '/modificar_ambiente' : '/agregar_ambiente';
-            if (idAmbiente) data.idambiente = idAmbiente;
+            var idDisponibilidad = $('#idDisponibilidad').val();
+            var url = idDisponibilidad ? '/modificar_disponibilidad' : '/agregar_disponibilidad';
+            if (idDisponibilidad) data.idDisponibilidad = idDisponibilidad;
 
             $.ajax({
                 url: url,
@@ -305,10 +319,10 @@
                     if (response.error) {
                         mostrarAlerta('error', 'Error', response.error);
                     } else {
-                        var mensajeExito = idAmbiente ? 'La operación se realizó correctamente.' : 'La operación se realizó correctamente.';
+                        var mensajeExito = idDisponibilidad ? 'La operación se realizó correctamente.' : 'La operación se realizó correctamente.';
                         mostrarAlerta('success', 'Éxito', mensajeExito);
                         table.ajax.reload();
-                        $('#modalAmbiente').modal('hide');
+                        $('#modalDisponibilidad').modal('hide');
                     }
                 },
                 error: function (xhr, status, error) {
@@ -335,19 +349,17 @@
 
                 var formattedData = rows.map((row, index) => {
                     return {
-                        aforo: row[headers.indexOf("Aforo")],
-                        estado: "A", // Asumiendo que todos están en estado "A"
-                        idambiente: index + 1, // Generando un ID secuencial
-                        idambientetipo: row[headers.indexOf("Tipo Ambiente")] === 'Laboratorio' ? 2 : 1,
-                        idedificio: getEdificioId(row[headers.indexOf("Edificio")]),
-                        nombre: row[headers.indexOf("Nombre")]
+                        docente: row[headers.indexOf("Docente")],
+                        dia: row[headers.indexOf("Dia")],
+                        horaInicio: row[headers.indexOf("Hora Inicio")],
+                        horaFin: row[headers.indexOf("Hora Fin")]
                     };
                 });
 
                 console.log(JSON.stringify(formattedData, null, 2)); // Visualizar los datos en forma de JSON en la consola
 
                 // $.ajax({
-                //     url: '/agrega_ambiente_excel',
+                //     url: '/agrega_disponibilidad_excel',
                 //     type: 'POST',
                 //     contentType: 'application/json',
                 //     data: JSON.stringify(formattedData),
@@ -369,40 +381,32 @@
             reader.readAsArrayBuffer(file);
         });
 
-        function getEdificioId(nombreEdificio) {
-            switch (nombreEdificio) {
-                case 'CEFO': return 5;
-                case 'DECANAS': return 4;
-                case 'EDIFICIO ANTIGUO': return 1;
-                default: return 0;
-            }
+        $('#tabla-disponibilidad tbody').on('click', '.btnModificar', function () {
+    var idpersona = $(this).data('idpersona');
+    var dia = $(this).data('dia');
+    var hora_inicio = $(this).data('hora_inicio');
+    var hora_fin = $(this).data('hora_fin');
+
+    $.ajax({
+        url: `/get_disponibilidad/${idpersona}/${dia}/${hora_inicio}/${hora_fin}`,
+        type: 'GET',
+        contentType: 'application/json',
+        success: function (response) {
+            var disponibilidad = response;
+            $('#docente').val(disponibilidad.idpersona);
+            $('#dia').val(disponibilidad.dia);
+            $('#horaInicio').val(disponibilidad.hora_inicio);
+            $('#horaFin').val(disponibilidad.hora_fin);
+            $('#modalDisponibilidadLabel').text('Modificar Disponibilidad');
+            $('#modalDisponibilidad').modal('show');
+        },
+        error: function (xhr, status, error) {
+            mostrarAlerta('error', 'Error', 'Hubo un error al obtener los datos de la disponibilidad.');
         }
+    });
+});
 
-        $('#tabla-ambiente tbody').on('click', '.btnModificar', function () {
-            var id = $(this).data('id');
-            $.ajax({
-                url: '/get_ambiente/' + id,
-                type: 'GET',
-                contentType: 'application/json',
-                success: function (response) {
-                    var ambiente = response;
-                    console.log(ambiente);
-                    $('#idAmbiente').val(ambiente.idambiente);
-                    $('#nombre').val(ambiente.nombre);
-                    $('#aforo').val(ambiente.aforo);
-                    $('#estado').val(ambiente.estado);
-                    $('#idedificio').val(ambiente.idedificio);
-                    $('#idambientetipo').val(ambiente.idambientetipo);
-                    $('#modalAmbienteLabel').text('Modificar Ambiente');
-                    $('#modalAmbiente').modal('show');
-                },
-                error: function (xhr, status, error) {
-                    mostrarAlerta('error', 'Error', 'Hubo un error al obtener los datos del ambiente.');
-                }
-            });
-        });
-
-        $('#tabla-ambiente tbody').on('click', '.btnEliminar', function () {
+        $('#tabla-disponibilidad tbody').on('click', '.btnEliminar', function () {
             var id = $(this).data('id');
             Swal.fire({
                 title: '¿Estás seguro?',
@@ -415,10 +419,10 @@
             }).then((result) => {
                 if (result.isConfirmed) {
                     $.ajax({
-                        url: '/eliminar_ambiente',
+                        url: '/eliminar_disponibilidad',
                         type: 'POST',
                         contentType: 'application/json',
-                        data: JSON.stringify({ idambiente: id }),
+                        data: JSON.stringify({ id: id }),
                         success: function (response) {
                             if (response.error) {
                                 var errorMsg = response.error; 
@@ -436,7 +440,7 @@
             });
         });
 
-        $('#tabla-ambiente tbody').on('click', '.btnDarDeBaja', function () {
+        $('#tabla-disponibilidad tbody').on('click', '.btnDarDeBaja', function () {
             var id = $(this).data('id');
             Swal.fire({
                 title: '¿Estás seguro?',
@@ -449,10 +453,10 @@
             }).then((result) => {
                 if (result.isConfirmed) {
                     $.ajax({
-                        url: '/dar_baja_ambiente',
+                        url: '/dar_baja_disponibilidad',
                         type: 'POST',
                         contentType: 'application/json',
-                        data: JSON.stringify({ idambiente: id }),
+                        data: JSON.stringify({ id: id }),
                         success: function (response) {
                             if (response.error) {
                                 var errorMsg = response.error; 
